--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2"
